--- a/software/changelog
+++ b/software/changelog
@@ -6,3 +6,7 @@
 
 2019-05-29: 2.0.2 (b230ce3)
 - Fix SPITFP IRQ race condition with other higher prio IRQs (through bricklib2)
+
+2020-02-28: 2.0.3 (<unknown>)
+- Don't reset read stream in getter if callback is enabled and vice versa
+- Add frame readable callback
