--- a/software/changelog
+++ b/software/changelog
@@ -10,3 +10,6 @@
 2020-02-28: 2.0.3 (8768b07)
 - Don't reset read stream in getter if callback is enabled and vice versa
 - Add frame readable callback
+
+2020-03-26: 2.0.4 (TBD)
+- Make sure there are no glitches on TX line during configuration change
