Use XMC1403 as minimum requirement

--- a/software/changelog
+++ b/software/changelog
@@ -13,3 +13,6 @@
 
 2020-03-26: 2.0.4 (12984d1)
 - Make sure there are no glitches on TX line during configuration change
+
+2020-06-23: 2.0.5 (TBD)
+- Use XMC1403 as minimum requirement (was 1404)
